--- a/client/src/app/components/files-grid-component/file-grid-component.html
+++ b/client/src/app/components/files-grid-component/file-grid-component.html
@@ -1,5 +1,5 @@
 <ag-grid-angular style="width: 95%; height: 715px;" class="ag-fresh"
                  [columnDefs]="columnDefs"
-                 [gridOptions]="gridOptions"
-                 (gridReady)="onGridReady($event)">
+                 (gridReady)="onGridReady($event)"
+                 [gridOptions]="gridOptions">
 </ag-grid-angular>
